@@ -25,6 +25,10 @@ The apis (APIs Secure) project offers an OAuth 2.0 Authorization Server that can
 
 First clone this repo. To build the sources you need to have [maven 3](http://maven.apache.org/download.html) installed.
 
+The default JVM size is not sufficient - it rarely is - so when running the various modules in test mode using `mvn` you will have to allocate more memory to the JVM:
+
+	export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=512M"
+
 After the clone build the entire project
 
     mvn clean install
@@ -40,7 +44,7 @@ Go the authorization-server-war and start the application
     cd apis-authorization-server-war
     mvn jetty:run
 
-The authorization-server-war application is capable of authenticating Resource Owners and granting and validating Access Tokens (and optional Refresh Tokens) on behalf of Resource Servers that are receiving resource calls from a Client app. It also offers a JavaScript application to manage Resource Servers and Client application instances. 
+The authorization-server-war application is capable of authenticating Resource Owners (e.g. users) and granting and validating Access Tokens (and optional Refresh Tokens) on behalf of Resource Servers that are receiving resource calls from a Client app. It also offers a JavaScript application to manage Resource Servers and Client application instances. 
 
 ### Run Example Resource Server (war & standalone modus)
 
@@ -98,7 +102,9 @@ After this you can add your own ResourceServer and Client instances. See the too
 
 #### Admin privileges
 It is possible to have admin privileges in the JS GUI, meaning you can edit / delete all of the known Resource Servers and Clients. A common usecase if you have a department responsible for the administration of ResourceServers and Clients. In order to obtain admin rights your
-AuthenticatedPrincipal needs to return true for the `isAdminPrincipal` method. The default implementation does not so and everyone can only edit / delete their own ResourceServers and Clients. The [surfconext authn submodule](https://github.com/OpenConextApps/apis/tree/master/apis-surfconext-authn) however serves as an example implementation that uses this feature.
+AuthenticatedPrincipal needs to return true for the `isAdminPrincipal` method. The default implementation does not so and everyone can only edit / delete their own ResourceServers and Clients. You can change this by changing the `authenticatorClass` configuration in the `apis-authorization-server-war/src/test/resources/apis.application.properties` file to `org.surfnet.oaaas.noop.NoopAdminAuthenticator`.
+
+The [surfconext authn submodule](https://github.com/OpenConextApps/apis/tree/master/apis-surfconext-authn) is another production-ready implementation that uses group membership to determine the is-admin feature.
 
 ### Component overview
 
@@ -110,7 +116,7 @@ The authorization server is capable of handing out access tokens on behalf of th
 
 Once a Client app has obtained an access token (in combination with a refresh token if you have configured this for the Client app) it can query the resource server with whatever data you would like to share on behalf of the user (so we have made the implicit assumption that the resource server will only hand out data that is for the users eyes only or perhaps only for users that share a certain membership - the enforcement of that is of course the responsibility of the resource server). Note that the actual authentication of the user is pluggable and in real life the API provided by the resource server and subsequent data will 'know' of the identity returned by the authentication part of the authorization.
 
-When the Client app queries the API of the resource server it will - prior to returning the data - ask the authorization server to validate the access token (For more info see the section 'How do Resource Servers verify the Access Token?'). If the token is valid (e.g. not expired and belonging to the Resource Server and Client app) then the identity of the owner who has granted consent/ access is returned. Note that the actual information in the identity (group memberships, emails or whatever) returned to the resource server is the exact information that was returned by the authentication module when the user proved he could authenticate him/herself.
+When the Client app queries the API of the resource server it will - prior to returning the data - ask the authorization server to validate the access token (For more info see the section [How do Resource Servers verify the Access Token?](https://github.com/OpenConextApps/apis#how-do-resource-servers-verify-the-access-token)). If the token is valid (e.g. not expired and belonging to the Resource Server and Client app) then the identity of the owner who has granted consent/ access is returned. Note that the actual information in the identity (group memberships, emails or whatever) returned to the resource server is the exact information that was returned by the authentication module when the user proved he could authenticate him/herself.
 
 Client apps and resource servers are registered using the OAuth admin application that is part of the authorization server. Note that the JavaScript OAuth admin application is actually also a Client app which needs to be registered out-of-band (e.g. by SQL) otherwise you will have the chicken-egg paradigm to solve. The resource server is something you will want to provide for yourself. After registration of your resource server with the admin client the key / secret for secure communication with the authorization server are provided to you.
 
@@ -203,6 +209,75 @@ a specific subtype of `AuthenticatedPrincipal` (e.g. would like to cast the prin
 `adminService.jsonTypeInfoIncluded` in the properties file that drive the Authorization Server (`apis.application.properties`) and respectively the properties file that drive the Resource Server
 (the property file driving the AuthorizationServletFilter - if used - is set using a servlet init-parameter named `apis-resource-server.properties.file`).
 
+#### Authorization Server - Resource Server demo flow
+
+First start up the Authorization Server (if you have not already done so):
+
+    cd apis-authorization-server-war
+    mvn jetty:run
+
+When started up in local development mode with Jetty the content of the in-memory test database is populated with the content from `apis/apis-authorization-server-war/src/main/resources/db/migration/hsqldb_content/V1__auth-server-admin.sql`. One entry in that file
+is a client configured with `allowedClientCredentials=true`.
+
+```sql
+/*
+Client for client credentials
+*/
+INSERT INTO client (id, contactEmail, contactName, description,
+                    clientName, thumbNailUrl, resourceserver_id,
+                    clientId, secret, allowedClientCredentials)
+VALUES
+    (99993, 'it-test-client-credential@example.com',
+    'john.client.credential.grant', 'it test client credential grant',
+    'it test client credential grant', 'thumbnailurl', 99997,
+    'it-test-client-credential-grant', 'some-secret-client-credential-grant', 1);
+INSERT INTO Client_scopes values (99993, 'read');
+```
+
+Let's test this client with curl. We need the base64 encoded client_key:secret (`it-test-client-credential-grant:some-secret-client-credential-grant`):
+
+    echo -n 'it-test-client-credential-grant:some-secret-client-credential-grant' | openssl base64
+
+and we use this to - [client credential grant](http://tools.ietf.org/html/draft-ietf-oauth-v2-31#section-1.3.4) does not involve any user involvement as it is granted to highly trusted clients - obtain a access token:
+
+    curl -v -H "Accept: application/json" -H "Content-type: application/x-www-form-urlencoded" -H \
+      "Authorization: Basic aXQtdGVzdC1jbGllbnQtY3JlZGVudGlhbC1ncmFudDpzb21lLXNlY3JldC1jbGllbnQtY3JlZGVudGlhbC1ncmFudA==" \
+      -X POST -d 'grant_type=client_credentials' http://localhost:8080/oauth2/token
+
+The result is a new access token:
+
+    {
+        "scope": "read",
+        "access_token": "38b0b9e5-0ff0-42f9-a9df-28cfaf996de2",
+        "token_type": "bearer",
+        "expires_in": 0
+    }
+
+Now test the call that a Resource Server would make to the Authorization Server when this client uses his newly obtained access token to perform an API call against the Resource Server. We will mimic the Resource Server that actually is connected to the client we used (`id = 99997, key:secret is it-test-resource-server:somesecret`).
+
+This is the call - proprietary API as described [out-of-scope](http://tools.ietf.org/html/draft-ietf-oauth-v2-31#section-1.1) in the OAuth2 specification - to the Authorization Server to validate the access token:
+
+    curl -v -H "Authorization: Basic aXQtdGVzdC1yZXNvdXJjZS1zZXJ2ZXI6c29tZXNlY3JldA==" \
+      "http://localhost:8080/v1/tokeninfo?access_token=38b0b9e5-0ff0-42f9-a9df-28cfaf996de2"
+
+And the result as expected (note as we used client credential flow the principal name is the client name);
+
+    {
+        "audience": "it test client credential grant",
+        "scopes": [
+            "read"
+        ],
+        "principal": {
+            "name": "it-test-client-credential-grant",
+            "roles": [],
+            "groups": [],
+            "adminPrincipal": false,
+            "attributes": {}
+        },
+        "expires_in": 0
+    }
+
+If you write your own implementation of the above flow for your Resource Servers strongly consider caching subsequent calls & answers from the Authorization Server.
 
 ### Plugging in your custom implementations
 
